--- a/content/labbmiljo/150_git.md
+++ b/content/labbmiljo/150_git.md
@@ -3,8 +3,6 @@
 Git
 ==================================
 
-Versionshanteringverktyget Git används till och från i kurserna. Du behöver ha det installerat på din dator. På Mac finns Git redan för-installerat, så använder du en senare utgåva av Mac OS så behöver du inte göra något.
-
-Du kan [installera det från Gits hemsida](http://git-scm.com/download).
+Versionshanteringverktyget Git används till och från i kurserna. Du behöver ha det installerat på din dator. På Mac finns Git redan förinstallerat, så använder du en senare utgåva av Mac OS så behöver du inte göra något.
 
 Här är en [guide till hur du installerar Git](kunskap/installera-versionshanteringssystemet-git).
