prepare info on coursepacket

--- a/content/utbildning/webbutveckling-och-programmering-30hp/2017/.meta.md
+++ b/content/utbildning/webbutveckling-och-programmering-30hp/2017/.meta.md
@@ -27,7 +27,6 @@ views:
         sort: 1
         data:
             class: col4
-            classes: no-bullet
             meta:
                 type: columns
                 columns:
@@ -50,6 +49,6 @@ views:
                         data:
                             meta:
                                 type: content
-                                route: ./block-antagning
+                                route: ./block-detaljer
 
 ...
