--- a/content/kurser/.meta.md
+++ b/content/kurser/.meta.md
@@ -13,12 +13,12 @@ views:
             meta: 
                 type: breadcrumb
 
-    columns1:
+    webbprogrammering11:
         region: columns-above
         template: default/columns
-        sort: 1
+        sort: 10
         data:
-            title: Webbprogrammering läsår 1, kurspaket webutv (antagna ht16)
+            title: Webbprogrammering läsår 1 (antagna ht16, ht17)
             class: col4
             classes: no-bullet
             meta:
@@ -45,10 +45,10 @@ views:
                                 type: content
                                 route: ./webapp-v2/block-kurser-kmom
 
-    columns2:
+    webbprogrammering12:
         region: columns-above
         template: default/columns
-        sort: 2
+        sort: 11
         data:
             class: col4
             classes: no-bullet
@@ -76,12 +76,12 @@ views:
                                 type: content
                                 route: ./oophp-v3/block-kurser-kmom
 
-    columns13:
+    webbprogrammering21:
         region: columns-above
         template: default/columns
-        sort: 3
+        sort: 30
         data:
-            title: Kurstillfällen campus
+            title: Webbprogrammering läsår 2 (antagna ht17)
             class: col4
             classes: no-bullet
             meta:
@@ -91,28 +91,60 @@ views:
                         data:
                             meta:
                                 type: content
-                                route: block/empty
+                                route: ./indproj/block-kurser-kmom
                     column-2:
                         data:
                             meta:
                                 type: content
-                                route: ./javascript/block-kurser-kmom
+                                route: ./matmod/block-kurser-kmom
                     column-3:
                         data:
                             meta:
                                 type: content
-                                route: ./dbjs/block-kurser-kmom
+                                route: ./telecom/block-kurser-kmom
                     column-4:
                         data:
                             meta:
                                 type: content
-                                route: block/empty
+                                route: ./sysver/block-kurser-kmom
 
-    columns14:
+    webbprogrammering22:
         region: columns-above
         template: default/columns
-        sort: 4
+        sort: 31
         data:
+            class: col4
+            classes: no-bullet
+            meta:
+                type: columns
+                columns:
+                    column-1:
+                        data:
+                            meta:
+                                type: content
+                                route: ./ramverk1/block-kurser-kmom
+                    column-2:
+                        data:
+                            meta:
+                                type: content
+                                route: ./ramverk2/block-kurser-kmom
+                    column-3:
+                        data:
+                            meta:
+                                type: content
+                                route: ./exjobb/block-kurser-kmom
+                    column-4:
+                        data:
+                            meta:
+                                type: content
+                                route: ./exjobb/block-kurser-kmom
+
+    campus:
+        region: columns-above
+        template: default/columns
+        sort: 40
+        data:
+            title: Kurstillfällen campus
             class: col4
             classes: no-bullet
             meta:
@@ -132,17 +164,81 @@ views:
                         data:
                             meta:
                                 type: content
-                                route: block/empty
+                                route: ./dbjs/block-kurser-kmom
                     column-4:
                         data:
                             meta:
                                 type: content
                                 route: block/empty
 
-    columns111:
+    webutv17:
         region: columns-above
         template: default/columns
-        sort: 5
+        sort: 20
+        data:
+            title: Kurspaket webutv (antagen ht17)
+            class: col4
+            classes: no-bullet
+            meta:
+                type: columns
+                columns:
+                    column-1:
+                        data:
+                            meta:
+                                type: content
+                                route: ./python-v1/block-kurser-kmom
+                    column-2:
+                        data:
+                            meta:
+                                type: content
+                                route: ./javascript1-v1/block-kurser-kmom
+                    column-3:
+                        data:
+                            meta:
+                                type: content
+                                route: ./linux-v2/block-kurser-kmom
+                    column-4:
+                        data:
+                            meta:
+                                type: content
+                                route: ./webapp-v2/block-kurser-kmom
+
+    webprog17:
+        region: columns-above
+        template: default/columns
+        sort: 21
+        data:
+            title: Kurspaket webprog (antagen ht17)
+            class: col4
+            classes: no-bullet
+            meta:
+                type: columns
+                columns:
+                    column-1:
+                        data:
+                            meta:
+                                type: content
+                                route: ./htmlphp-v2/block-kurser-kmom
+                    column-2:
+                        data:
+                            meta:
+                                type: content
+                                route: ./design-v1/block-kurser-kmom
+                    column-3:
+                        data:
+                            meta:
+                                type: content
+                                route: ./dbw-v1/block-kurser-kmom
+                    column-4:
+                        data:
+                            meta:
+                                type: content
+                                route: ./oophp-v3/block-kurser-kmom
+
+    webutv16:
+        region: columns-above
+        template: default/columns
+        sort: 60
         data:
             title: Kurspaket webutv (antagna tom vt16, sista kurs ht16)
             class: col4
@@ -171,10 +267,10 @@ views:
                                 type: content
                                 route: ./webapp-v1/block-kurser-kmom
 
-    columns112:
+    webprog16:
         region: columns-above
         template: default/columns
-        sort: 6
+        sort: 61
         data:
             title: Kurspaket webprog (antagen tom vt16, sista kurs ht16)
             class: col4
@@ -202,69 +298,6 @@ views:
                             meta:
                                 type: content
                                 route: ./javascript/block-kurser-kmom
-
-    columns3:
-        region: columns-above-NO
-        template: default/columns
-        sort: 3
-        data:
-            title: Läsår 2
-            class: col4
-            classes: no-bullet
-            meta:
-                type: columns
-                columns:
-                    column-1:
-                        data:
-                            meta:
-                                type: content
-                                route: ./ramverk1/block-kurser-kmom
-                    column-2:
-                        data:
-                            meta:
-                                type: content
-                                route: ./ramverk2/block-kurser-kmom
-                    column-3:
-                        data:
-                            meta:
-                                type: content
-                                route: ./telecom/block-kurser-kmom
-                    column-4:
-                        data:
-                            meta:
-                                type: content
-                                route: ./test/block-kurser-kmom
-
-    columns4:
-        region: columns-above-NO
-        template: default/columns
-        sort: 4
-        data:
-            class: col4
-            classes: no-bullet
-            meta:
-                type: columns
-                columns:
-                    column-1:
-                        data:
-                            meta:
-                                type: content
-                                route: ./indproj/block-kurser-kmom
-                    column-2:
-                        data:
-                            meta:
-                                type: content
-                                route: ./matte1/block-kurser-kmom
-                    column-3:
-                        data:
-                            meta:
-                                type: content
-                                route: ./exjobb/block-kurser-kmom
-                    column-4:
-                        data:
-                            meta:
-                                type: content
-                                route: ./exjobb/block-kurser-kmom
 
     columnsXtra:
         region: columns-above
