update oopython to v2

--- a/content/kurser/.meta.md
+++ b/content/kurser/.meta.md
@@ -69,7 +69,8 @@ views:
                         data:
                             meta:
                                 type: content
-                                route: ./oopython/block-kurser-kmom
+                                # ht16 = oopython-v1, ht17 = oopython-v2
+                                route: ./oopython-v2/block-kurser-kmom
                     column-4:
                         data:
                             meta:
