--- a/content/kurser/.meta.md
+++ b/content/kurser/.meta.md
@@ -165,7 +165,7 @@ views:
                         data:
                             meta:
                                 type: content
-                                route: ./dbjs/block-kurser-kmom
+                                route: ./dbjs-v2/block-kurser-kmom
                     column-4:
                         data:
                             meta:
