add kursupplägg till program och antagningsomgång

--- a/content/kurser/.meta.md
+++ b/content/kurser/.meta.md
@@ -18,7 +18,7 @@ views:
         template: default/columns
         sort: 10
         data:
-            title: Webbprogrammering läsår 1 (antagna ht16, ht17)
+            title: Webbprogrammering läsår 1
             class: col4
             classes: no-bullet
             meta:
@@ -43,6 +43,7 @@ views:
                         data:
                             meta:
                                 type: content
+                                # ht16 webapp-v2, ht17 webapp-v2
                                 route: ./webapp-v3/block-kurser-kmom
 
     webbprogrammering12:
@@ -75,7 +76,8 @@ views:
                         data:
                             meta:
                                 type: content
-                                route: ./oophp-v3/block-kurser-kmom
+                                # ht16 oophp-v3, ht17 databas-v1, ht18 oophp-v4
+                                route: ./databas-v1/block-kurser-kmom
 
     webbprogrammering21:
         region: columns-above
@@ -133,12 +135,12 @@ views:
                         data:
                             meta:
                                 type: content
-                                route: ./exjobb/block-kurser-kmom
+                                route: ./exjobb/block-kurser2-kmom
                     column-4:
                         data:
                             meta:
                                 type: content
-                                route: ./exjobb/block-kurser-kmom
+                                route: ./exjobb/block-kurser2-kmom
 
     campus:
         region: columns-above
