--- a/content/guide/kom-igang-med-sql-i-mysql/.meta.md
+++ b/content/guide/kom-igang-med-sql-i-mysql/.meta.md
@@ -42,7 +42,7 @@ views:
         region: sidebar-left
         template: default/toc
         data:
-            title: Labbmiljö
+            title: Innehåll
             meta: 
                 type: book-toc
 
