--- a/content/om/.meta.md
+++ b/content/om/.meta.md
@@ -18,7 +18,7 @@ views:
     main:
         sort: 2
         data:
-            baseurl: kurser/faq
+            baseurl: om
             meta:
                 type: toc-sort
 
