added class diagram to oopython guide

--- a/content/guide/kom-igang-med-objektorienterad-programmering-i-python/210_arv.md
+++ b/content/guide/kom-igang-med-objektorienterad-programmering-i-python/210_arv.md
@@ -40,6 +40,8 @@ class Movie(Video):
 
 Nu har vi påbörjat klassen Movie och bestämt att den ärver från Video. Vi lägger till en konstruktor i Movie där vi ser till att instansattributen från Video följer med i Movie:
 
+[FIGURE src=/image/oopython/guide/vid_mov_arv.png class="right" caption="Klassdiagram över Video och Movie med arv."]
+
 ```python
 class Movie(Video):
 
