--- a/content/kurser/exjobb/arbeten/a2019.md
+++ b/content/kurser/exjobb/arbeten/a2019.md
@@ -38,17 +38,19 @@ Företag ICS Sweden. Byta ut befintliga processer med excel till webbaserade, ä
 
 Christofer Augustsson
 
-Handledare: Ej bestämt, ev Torbjörn Fridensköld
+Handledare: Torbjörn Fridensköld
 
 
 
 **Virtuellt taktsystem @ Dynapac**
 
-Företag Dynapac. Fokus IoT och IIoT (Industrial Internet of Things).
+Företag Dynapac.
+
+Fokus IoT och IIoT (Industrial Internet of Things).
 
 Jonatan Lindblom, Christofer Wikman
 
-Handledare: Ej bestämt, ev Conny J, Mikael S
+Handledare: Conny Johansson
 
 
 
@@ -59,6 +61,32 @@ Kund Dynapac.
 Can web applications be used as  a  common  tool  and  be  created  and  maintained  by  none  software  developers?
 
 Marcus Holmersson
+
+Handledare: Conny Johansson
+
+
+
+**Multifunctional mobile web applications and optimizing content for smartphones**
+
+Kund: My client is developing a web site that provides content from four popular game streamingservices on one common site.
+
+I intend to investigate the best way to adapt content that is originally meant for adesktop-sized screen or content in general to be as readable, user-friendly andwell-performing as possible.
+
+Eric Johansson
+
+Handledare: Kenneth Lewenhagen
+
+
+
+**Swift vs React Native**
+
+Ej kund.
+
+Min egen idé är att jämföra processen för att skapa en native app i Swift och en cross-platform i React Native. Men framför allt vilken prestanda de olika metoderna ger. Vilka för- och nackdelar finns.
+
+Oliver Johnsson
+
+Handledare: Andreas Arnesson
 
 
 
@@ -74,30 +102,6 @@ Handledare: Ej bestämt, ev Kenneth Lewenhagen eller Andreas Arnesson
 
 
 
-**Multifunctional mobile web applications and optimizing content for smartphones**
-
-Kund: My client is developing a web site that provides content from four popular game streamingservices on one common site.
-
-I intend to investigate the best way to adapt content that is originally meant for adesktop-sized screen or content in general to be as readable, user-friendly andwell-performing as possible.
-
-Eric Johansson
-
-Handledare: Ej bestämt, ev Kenneth Lewenhagen
-
-
-
-**Swift vs React Native**
-
-Ej kund.
-
-Min egen idé är att jämföra processen för att skapa en native app i Swift och en cross-platform i React Native. Men framför allt vilken prestanda de olika metoderna ger. Vilka för- och nackdelar finns.
-
-Oliver Johnsson
-
-Handledare: Ej bestämt, ev Andreas Arnesson
-
-
-
 **Interface and report page for multiple billing systems**
 
 Kund Miss hosting AB.
@@ -108,7 +112,19 @@ The main challenge would be to investigate about the closed source system WHMCS 
 
 Edward Nilsson
 
-Handledare: Ej bestämt, ev Andreas? Mikael S? Conny J? Mikael R?
+Handledare: Mikael Svahnberg
+
+
+
+**Python vs Javascript: Real time web applications**
+
+Ingen kund.
+
+Studera området realtidswebb och jämföra hur python vs javascript implementerar realtidswebb.
+
+Vilhelm Martinsson
+
+Handledare: Mikael Svahnberg
 
 
 
@@ -159,8 +175,14 @@ Handledare: Ev Mikael Roos
 
 Viktor Bengtsson
 
+Troligen byte till GraphQL och REST.
+
+Handledare: Emil Folino
+
 
 
 **TBD**
 
 Klaes Wärnå
+
+Handledare: ? Andreas eller Kenneth?
