(B, mos) handledare på plats.

--- a/content/kurser/exjobb/arbeten/a2019.md
+++ b/content/kurser/exjobb/arbeten/a2019.md
@@ -1,6 +1,7 @@
 ---
 author: mos
 revision:
+    "2019-02-08": "(B, mos) handledare på plats."
     "2019-02-04": "(A, mos) Första utgåvan i samband med topic."
 ...
 Examensjobb 2019
@@ -10,20 +11,6 @@ Här följer ett urval på examensarbeten som är planerade att pågå under 201
 
 
 <!--more-->
-
-<!--
-Handledare:
-
-cjh 2
-msv 2
-torbjörn 1
-
-klw x
-aar x
-efo x
-mos x
-
--->
 
 
 
@@ -78,6 +65,18 @@ Handledare: Kenneth Lewenhagen
 
 
 
+**Virtual Reality in the Treatment of Anxiety and Phobias**
+
+I would like to study the current status and the potential of virtual reality as a tool for psychologists in the treatment of patients suffering from anxiety disorders, phobias being one example of them. 
+
+Kund: a clinical psychologist who is planning to include virtual reality technology as a tool in his practice.
+
+Daniel Ibanez Alegria
+
+Handledare: Kenneth Lewenhagen
+
+
+
 **Swift vs React Native**
 
 Ej kund.
@@ -87,18 +86,6 @@ Min egen idé är att jämföra processen för att skapa en native app i Swift o
 Oliver Johnsson
 
 Handledare: Andreas Arnesson
-
-
-
-**Virtual Reality in the Treatment of Anxiety and Phobias**
-
-I would like to study the current status and the potential of virtual reality as a tool for psychologists in the treatment of patients suffering from anxiety disorders, phobias being one example of them. 
-
-Kund: a clinical psychologist who is planning to include virtual reality technology as a tool in his practice.
-
-Daniel Ibanez Alegria
-
-Handledare: Ej bestämt, ev Kenneth Lewenhagen eller Andreas Arnesson
 
 
 
@@ -136,7 +123,7 @@ Koppling till en webbsida är att de haft problem med sabotage som har möjliggj
 
 David Johansson
 
-Handledare: Ev Mikael Roos
+Handledare: Mikael Roos
 
 
 
@@ -150,7 +137,7 @@ Kund Region Blekinge.
 
 Philip Klingzell
 
-Handledare: Ev Mikael Roos
+Handledare: Mikael Roos
 
 
 
@@ -163,19 +150,17 @@ Företag Bouvet, Örebro. Fokus på UI/UX moduler inom webb- och REST-appar.
 
 Ara Nour Bakhsh
 
-Handledare: Ev Mikael Roos
+Handledare: Mikael Roos
 
 
 
----
+**REST vs GraphQL – Är GraphQL redo att ersätta REST?**
 
-
-
-**Sentiment Analys – Kan användares åsikter förutse aktieavkastning?**
+Ej kund.
 
 Viktor Bengtsson
 
-Troligen byte till GraphQL och REST.
+Finns det några tydliga skillnader mellan REST och GraphQL och vilka för- och nackdelar har de två teknikerna? Målet blir att undersöka hur datahantering sker i båda teknikerna. Sen vill jag även undersöka hur själva koden skiljer sig åt dels genom att titta på hur enkel koden är att förstå, mängden kod som krävs för att bygga ett användarsystem och hur detta kan påverka utvecklingstiden.
 
 Handledare: Emil Folino
 
@@ -183,6 +168,6 @@ Handledare: Emil Folino
 
 **TBD**
 
-Klaes Wärnå
+Klas Wärnå
 
-Handledare: ? Andreas eller Kenneth?
+Handledare: Andreas Arnesson
