(C, mos) lade till kandidatjobb.

--- a/content/kurser/exjobb/arbeten/a2018.md
+++ b/content/kurser/exjobb/arbeten/a2018.md
@@ -1,20 +1,22 @@
 ---
 author: mos
 revision:
+    "2019-02-22": (C, mos) lade till kandidatjobb.
     "2018-12-21": (B, mos) Urval som finns med URN i DIVA.
     "2018-02-12": (A, mos) Första utgåvan.
 ...
 Examensjobb 2018
 ====================================
 
-Här följer ett urval på examensarbeten som lämnats in under 2018.
+Här följer ett urval på examensarbeten (högskole/kandidat/magister-examen) som lämnats in under 2018.
 
+Urvalet är gjort för att vara intressant för de som skall skriva sina arbeten inom programmet Webbprogrammering.
 
 <!--more-->
 
 
 
-Högskoleexamen {#hogskoleexamen}
+Högskolearbeten {#hogskoleexamen}
 ------------------------------------
 
 **Self-organizing Distributed Team: Working agile and effective**
@@ -126,3 +128,33 @@ Denna rapport [vann ett stipendie från Sparbankstiftelsen](https://dbwebb.se/fo
 This paper looks into how data is best visualized and how visualizations should be designed to be most easily perceived. Furthermore the study looks into what tools there are available on the market today for visualizing data in angular 5 applications. With regards to a client, a developer team from the swedish police IT-department, the tools are evaluated and the one most suitable for the client is found. The paper also looks into how a dynamic data solution can be developed in angular 5. A solution where data can be selected in one component and displayed in another.
 
 Tobias Almroth ([URN](http://urn.kb.se/resolve?urn=urn%3Anbn%3Ase%3Abth-17014))
+
+
+
+Kandidatarbeten {#kandidat}
+------------------------------------
+
+**Recreating a Native Application in React Native : Feasibility of Using React Native With Bluetooth & Background Processing**
+
+To investigate React Native’s capabilities, we are going to look into the feasibility of porting the Android and iOS versions of an already existing fitness app, developed by a software consulting company. The original app uses Bluetoothfunctionality to record users’ heart-rate during exercise. They want to know if they can switch to React Native and a single code-base for future installments, lessening the workload and making it more maintainable.
+
+Oscar Lifh, Petrus Lidholm ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-16295))
+
+
+
+**Responsive images in HTML5: A standardized solution in markup language**
+
+ This thesis aims to explore through a literary study which valid standardized responsive image solutions there are using HTML5 and how to implement them. The empirical study of this thesis will be an experiment conducted to find answers on what the benefits are and what you must consider when implementing responsive image solutions. The experiment consists of collecting data from three different websites implementing various degrees of responsive image solutions. We conclude from the literary study that there are currently two valid standardized responsive image solutions in HTML5 in the form of the ‘picture’ element and the ‘srcset’ attribute.
+
+Philip Esmailzade ([URN](http://urn.kb.se/resolve?urn=urn%3Anbn%3Ase%3Abth-16260))
+
+
+
+Magister/masterarbeten {#master}
+------------------------------------
+
+**Comparison and Prediction of Temporal Hotspot Maps**
+
+To aid law enforcement agencies when coordinating and planning their efforts to prevent crime, there is a need to investigate methods used in such areas. With the help of crime analysis methods, law enforcementar e more efficient and pro-active in their work. One analysis method is temporal hotspot maps. The temporal hotspot map is often represented as a matrix with a certain resolution such as hours and days, if the aim is to show occurrences of hour in correlation to weekday. This thesis includes a software prototype that allows for the comparison, visualization and prediction of temporal data.
+
+Andreas Arnesson, Kenneth Lewenhagen ([URN](http://urn.kb.se/resolve?urn=urn%3Anbn%3Ase%3Abth-16306))
