(C, mos) lade till kandidatjobb.

--- a/content/kurser/exjobb/arbeten/a2018.md
+++ b/content/kurser/exjobb/arbeten/a2018.md
@@ -1,18 +1,20 @@
 ---
 author: mos
 revision:
-    "2019-02-22": (C, mos) lade till kandidatjobb.
-    "2018-12-21": (B, mos) Urval som finns med URN i DIVA.
-    "2018-02-12": (A, mos) Första utgåvan.
+    "2019-02-22": "(C, mos) lade till kandidatjobb."
+    "2018-12-21": "(B, mos) Urval som finns med URN i DIVA."
+    "2018-02-12": "(A, mos) Första utgåvan."
 ...
 Examensjobb 2018
 ====================================
 
-Här följer ett urval på examensarbeten (högskole/kandidat/magister-examen) som lämnats in under 2018.
+Här följer ett urval på examensarbeten (högskole/kandidat/magister-examen) som lämnats in under 2017 -- 2018.
 
 Urvalet är gjort för att vara intressant för de som skall skriva sina arbeten inom programmet Webbprogrammering.
 
 <!--more-->
+
+[Sök själv i DiVA efter äldre examensjobb](bth.diva-portal.org/smash/search.jsf).
 
 
 
@@ -147,6 +149,15 @@ Oscar Lifh, Petrus Lidholm ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-16
  This thesis aims to explore through a literary study which valid standardized responsive image solutions there are using HTML5 and how to implement them. The empirical study of this thesis will be an experiment conducted to find answers on what the benefits are and what you must consider when implementing responsive image solutions. The experiment consists of collecting data from three different websites implementing various degrees of responsive image solutions. We conclude from the literary study that there are currently two valid standardized responsive image solutions in HTML5 in the form of the ‘picture’ element and the ‘srcset’ attribute.
 
 Philip Esmailzade ([URN](http://urn.kb.se/resolve?urn=urn%3Anbn%3Ase%3Abth-16260))
+
+
+
+**Usage of Angular from developer’s perspective: Based on a literature and empirical study**
+
+Usage of frameworks is a crucial technology to be successful in developing business, Angular has exploded in usage because of its unique features. To give an as accurate knowledge as possible this essay contains a literature study of reliable references. The essay also contains an empirical study based on developers own perspective of Angular. With the help of this essay you will have the opportunity to choose which version of Angular suits your company best. With help from our responders we understand that Angular 2 is efficient and unique framework, we believe it will take Angular 2 a few years to be a standard technology at companies.
+
+Emma Thorén, Filip Stål Brännlund ([URN](http://urn.kb.se/resolve?urn=urn%3Anbn%3Ase%3Abth-14611))
+
 
 
 
