gjorde om kmom06 att handla om Binary Search Tree

--- a/content/kurser/oopython-v2/kmom06-2018.md
+++ b/content/kurser/oopython-v2/kmom06-2018.md
@@ -1,23 +1,25 @@
 ---
 author: aar
 revision:
-    "2019-02-22": (C, aar) Changed to be about Binary Search Tree.
     "2018-02-12": (B, aar) First version v2.
     "2017-11-10": (PB1, mos) Utkast till v2.
     "2017-02-14": (A, lew) First version.
 ...
-Kmom06: Datastrukturen träd
+Kmom06: Analysera och Förbättra kod
 ====================================
-[INFO]
+[WARNING]
 
-Gör `dbwebb update` och `dbwebb init` innan du startar med kursmomentet.
-[/INFO]
+**Översikt pågår**
 
-Vi jobbar vidare med datastrukturer och algoritmer och kollar på träd strukturen. Mer specifikt ska vi lära oss skapa ett Binärt sökträd och skapa algoritmer som kan traversera trädet. 
+Kursmomentet är under översyn inför vårterminen 2019.
+
+[/WARNING]
+
+Vi ska öva på att läsa och förstå kod. Hur förstår vi koden på bästa sätt? Vad är det som tar tid i koden? Kan vi förbättra koden?
 
 <!--more-->
 
-[FIGURE src=/image/oopython/kmom06/bst.svg caption="Ett binärt sökträd."]
+[FIGURE src=/image/oopython/kmom06/improve.png?w=w2 caption="För upptagen för att förbättra?"]
 
 
 <small><i>(Detta är instruktionen för kursmomentet och omfattar det som skall göras inom ramen för kursmomentet. Momentet omfattar cirka **20 studietimmar** inklusive läsning, arbete med övningar och uppgifter, felsökning, problemlösning, redovisning och eftertanke. Läs igenom hela kursmomentet innan du börjar jobba. Om möjligt -- planera och prioritera var du vill lägga tiden.)</i></small>
@@ -27,7 +29,8 @@ Vi jobbar vidare med datastrukturer och algoritmer och kollar på träd struktur
 Läsanvisningar  {#lasanvisningar}
 ---------------------------------
 
-*(ca: 1 studietimmar)*
+*(ca: 8-10 studietimmar)*
+
 
 ###Kurslitteratur  {#kurslitteratur}
 
@@ -39,7 +42,9 @@ Inget att läsa.
 
 ###Artiklar {#artiklar}
 
-Inget att läsa.
+1. [The secrets to learning code](http://blog.teamtreehouse.com/the-secret-to-learning-code).
+
+1. [Why I Love Reading Other People’s Code And You Should Too](https://www.skorks.com/2010/05/why-i-love-reading-other-peoples-code-and-you-should-too/).
 
 
 
@@ -47,8 +52,7 @@ Inget att läsa.
 
 Titta på följande:
 
-Inget att titta på.
-
+1. [How to read code](https://www.youtube.com/watch?v=-KgU5sxGtuM).
 
 ###Lästips {#lastips}
 
@@ -61,13 +65,13 @@ Inget att titta på.
 Övningar & Uppgifter  {#ovningar_uppgifter}
 -------------------------------------------
 
-*(ca: 19 studietimmar)*
+*(ca: 8-10 studietimmar)*
 
 
 
 ###Övningar {#ovningar}
 
-Gör övningen [Träd datastrukturer](kunskap/trad-datastruktur).
+Det finns inga övningar.
 
 
 
@@ -75,7 +79,9 @@ Gör övningen [Träd datastrukturer](kunskap/trad-datastruktur).
 
 Dessa uppgifter skall utföras och redovisas.
 
-1. Gör uppgiften "[Skapa ett Binary Search Tree](uppgift/binary-search-tree)"
+1. Gör uppgiften "[Förbättra exekeringstid](uppgift/improve-exectime)"  
+
+1. Fyll på redovisning.html med kursmomentets redovisningstext.
 
 ```bash
 # Ställ dig i kurskatalogen
@@ -99,8 +105,12 @@ Läs [instruktionen om hur du skall redovisa](./../redovisa).
 
 Se till att följande frågor besvaras i redovisningstexten.
 
-* Vad är ett Binärt sökträd?
-* Hur gick det att skriva de rekursiva funktionerna?
-* Vad är Inorder, Preorder och Postorder när man pratar om traversera träd? 
-* Kan du jämföra och resonera kring de olika datastrukturerna vi gått igenom i kursen? Vilken passar till vad?
-* Gick det bra att utföra kursmomentet?
+* Vad gör koden?
+
+* Läste du någon av läsanvisningarna? Hade du nytta av dem när du löste uppgiften?
+
+* Vad var din metod för att förstå och förbättra koden?
+
+* Vad tycker du om denna typen av uppgifter?
+
+* Hur var uppgiften svårighet- och tidsmässigt?
