more on bash guide

--- a/content/guide/kom-igang-med-bash/405_if.md
+++ b/content/guide/kom-igang-med-bash/405_if.md
@@ -6,14 +6,99 @@ revision:
 if statement
 =======================
 
-true - false
+När vi använder if-satser är vi redan bekanta med att det görs en kontroll där en operator används för att avgöra hur vi går vidare med exekveringen.
+
+
+
+### if {#if}
+
+En helt vanlig if-sats. Håll till godo.
 
 ```bash
 #!/usr/bin/env bash
 #
-# An example script for the linux course
+# An example script on if statement
 
+# If with values
 
+val1=10
+
+if [[ $val1 -gt 5 ]]
+then
+    echo "$val1 is greater than 5"
+fi
+
+# If with strings
+
+string1="musik"
+string2="akustik"
+
+if [[ $string1 = "musik" ]]
+then
+    echo "$string1 spells like musik"
+fi
+
+if [[ $string1 != "$string2" ]]
+then
+    echo "$string1 is not the same word as $string2"
+fi
 ```
 
-### else-if
+### else-if/else {#elseif}
+
+Vi blandar in else-if och else blocken med och tittar hur konstruktionen ser ut:
+
+```bash
+#!/usr/bin/env bash
+#
+# An example script on if/else-if statement
+
+# If/else-if/else with values
+
+val1=5
+
+if [[ $val1 -gt 5 ]]
+then
+    echo "$val1 is greater than 5"
+elif [[ $val1 -lt 5 ]]
+then
+    echo "$val1 is less than 5"
+else
+    echo "$val1 is 5"
+fi
+```
+
+Man kan även stöta på konstruktioner som:
+
+```bash
+#!/usr/bin/env bash
+#
+# An example script on if/else-if statement
+
+# If/else-if/else with values
+val1=5
+
+if [[ $val1 -gt 5 ]]; then echo "$val1 is greater than 5"
+elif [[ $val1 -lt 5 ]]; then echo "$val1 is less than 5"
+else echo "$val1 is 5"
+fi
+```
+
+Det fungerar precis lika bra och validerar fint. Semikolonet används för att separera kommandon på samma rad.
+
+
+
+### Ternary {#ternary}
+
+Många funderar säkert på om det går att förkorta det ännu mer, likt en ternary operator. Vi löser det på följande sätt:
+
+```bash
+#!/usr/bin/env bash
+#
+# An example script on ternary variant
+
+val1=10
+
+[[ $val1 -ge 5 ]] && res="greater or equal" || res="less"
+echo "$res"
+```
