--- a/content/guide/kom-igang-med-ssh/100_ssh.md
+++ b/content/guide/kom-igang-med-ssh/100_ssh.md
@@ -5,7 +5,7 @@ author: lew
 revision:
     "2019-03-08": "(A, lew) Första versionen."
 ...
-SSH
+Kom igång med SSH
 =======================
 
 SSH står för *Secure Shell* och är ett protokoll med vilket vi kan ansluta till andra datorer. Det krävs en server och en klient där klienten ansluter till servern. En av fördelarna med SSH är att all data krypteras när det skickas.
