--- a/content/guide/kom-igang-med-bash/800_ifs.md
+++ b/content/guide/kom-igang-med-bash/800_ifs.md
@@ -30,7 +30,7 @@ is
 awesome
 ```
 
-Det fungerar ju precis om planerat. OM vi hade haft en annan sträng att jobba med kanske vi hade behövt ändra IFS:
+Det fungerar ju precis om planerat. Om vi hade haft en annan sträng att jobba med kanske vi hade behövt ändra IFS:
 
 ```bash
 #!/usr/bin/env bash
