--- a/content/guide/docker/.meta.md
+++ b/content/guide/docker/.meta.md
@@ -10,7 +10,7 @@ views:
         region: breadcrumb
         template: default/breadcrumb
         data:
-            meta: 
+            meta:
                 type: breadcrumb
 
     next-previous-above:
@@ -19,7 +19,7 @@ views:
         sort: 1
         data:
             nextPreviousTitle: false
-            meta: 
+            meta:
                 type: next-previous
 
     main:
@@ -34,7 +34,7 @@ views:
         sort: 3
         data:
             nextPreviousTitle: true
-            meta: 
+            meta:
                 type: copy
                 view: next-previous-above
 
@@ -42,8 +42,8 @@ views:
         region: sidebar-left
         template: default/toc
         data:
-            title: Labbmiljö
-            meta: 
+            title: Docker
+            meta:
                 type: book-toc
 
 
