added flask-docker in guide

--- a/content/guide/docker/510_php.md
+++ b/content/guide/docker/510_php.md
@@ -32,4 +32,18 @@ CMD apachectl -D FOREGROUND
 
 Först installerar vi php7.3 och lägger till det till "enabled modules".
 
-Det sista `RUN`-kommandot byter filändelse på default-filen och sedan fyller jag på filen med `phpinfo()` som visar php-miljön på servern. Kika via `localhost:8080` i webbläsaren.
+Det sista `RUN`-kommandot byter filändelse på default-filen och sedan fyller jag på filen med `phpinfo()` som visar php-miljön på servern.
+
+
+
+### Bygga och köra {#build-n-run}
+
+Nu har vi allt på plats för att bygga vår image...
+
+`$ docker build -t php-test:v1 .`
+
+...och köra den:
+
+`$ docker run --rm -p 8080:80 php-test:v1`
+
+Nu kan vi peka webbläsaren mot `localhost:8080`.
