--- a/content/guide/docker/510_php.md
+++ b/content/guide/docker/510_php.md
@@ -40,10 +40,10 @@ Det sista `RUN`-kommandot byter filändelse på default-filen och sedan fyller j
 
 Nu har vi allt på plats för att bygga vår image...
 
-`$ docker build -t php-test:v1 .`
+`$ docker build -t username/imagename:tag .`
 
 ...och köra den:
 
-`$ docker run --rm -p 8080:80 php-test:v1`
+`$ docker run --rm -p 8080:80 username/imagename:tag`
 
 Nu kan vi peka webbläsaren mot `localhost:8080`.
