Added exjobbs for 2019

--- a/content/kurser/exjobb/arbeten/a2019.md
+++ b/content/kurser/exjobb/arbeten/a2019.md
@@ -47,7 +47,7 @@ Kund Dynapac.
 
 Can web applications be used as  a  common  tool  and  be  created  and  maintained  by  none  software  developers?
 
-Marcus Holmersson
+Marcus Holmersson ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17882))
 
 Handledare: Conny Johansson
 
@@ -59,7 +59,7 @@ Kund: My client is developing a web site that provides content from four popular
 
 I intend to investigate the best way to adapt content that is originally meant for adesktop-sized screen or content in general to be as readable, user-friendly andwell-performing as possible.
 
-Eric Johansson
+Eric Johansson ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17996))
 
 Handledare: Kenneth Lewenhagen
 
@@ -67,7 +67,7 @@ Handledare: Kenneth Lewenhagen
 
 **Virtual Reality in the Treatment of Anxiety and Phobias**
 
-I would like to study the current status and the potential of virtual reality as a tool for psychologists in the treatment of patients suffering from anxiety disorders, phobias being one example of them. 
+I would like to study the current status and the potential of virtual reality as a tool for psychologists in the treatment of patients suffering from anxiety disorders, phobias being one example of them.
 
 Kund: a clinical psychologist who is planning to include virtual reality technology as a tool in his practice.
 
@@ -148,7 +148,7 @@ Företag Bouvet, Örebro. Fokus på UI/UX moduler inom webb- och REST-appar.
 * Förstå skillnaden mellan UI/UX
 * Hur uppnår man en väldesignad UI/UX?
 
-Ara Nour Bakhsh
+Ara Nour Bakhsh ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-18016))
 
 Handledare: Mikael Roos
 
@@ -166,8 +166,18 @@ Handledare: Emil Folino
 
 
 
-**TBD**
+**Programmering i skolmatematiken: problemlösning eller problemskapande**
 
-Klas Wärnå
+Denna uppsats handlar om hur programmering som verktyg i matematisk problemlösning har implementerats sedan det infördes som obligatoriskt i flera av gymnasiets mattekurser hösten 2018. Syftet är att reda ut vilka programmeringsspråk och programbibliotek som används ute i klassrummen och hur det upplevs av elever och lärare med avseende på svårighetsgrad, nytta för matematiken och om det bidragit till ett ökat intresse för programmering i allmänhet hos eleverna. Även eventuella könsrelaterade skillnader i dessa frågor har undersökts, då en av de politiska intentionerna med införandet varit att en förhoppning att främja flickors it-intresse.
+
+Arbetet tar sitt teoretiska avstamp i en genomgång av den politiska bakgrunden till införandet, tidigare studier i ämnet och en kort historik om programmeringens roll i läroplanerna.
+
+Med hjälp av digitala enkäter har fallstudier företagits i två klasser från olika gymnasieskolor i Skåne, där elever och lärare fått ta ställning till antal påstående genom att gradera på en skala hur väl påståendena stämmer samt komplettera med eventuell textkommentar. Enkäterna var anonyma men utformade på ett sådant sätt att lärare och elever kunnat kopplas samman klassvis.
+
+Av resultatet har framkommit att många elever visserligen uppfattar programmeringen som svår och inte anser att den underlättar förståelsen för matematik. Men det framkom också att skillnaden var stor i dessa frågor och svaren tycks hänga samman med lärarens tidigare erfarenhet av programmering och i vilken omfattning programmeringen lärts ut. Intresset för programmering i allmänhet tycks inte ökat nämnvärt p.g.a. att det ingår i matematiken, men det låter sig heller inte entydigt sägas om någotdera könet var mer positivt eller negativt inställd till programmeringen. En något större andel tjejer än killar valde det allra mest negativa alternativet i enkätfrågorna, men klumpar man samman de mest negativa respektive de mest positiva alternativen på varsin halva om mitten, var tjejerna å andra sidan något överrepresenterade bland de positiva alternativen.
+
+Python verkar vara ett lämpligt programmeringsspråk att använda. Det är viktigt att tillse att lärare har tillräcklig kunskap i programmering och att omfattningen i utlärandet av programmering inte blir alltför ytlig, för att eleverna skall tillägna sig nyttan av det. Obligatorisk programmering i matematik kan potentiellt bidra till att fler för upp ögonen för ämnet och på sikt minska den sneda könsfördelningen bland yrkesprogrammerare.
+
+Klas Wärnå ([URN](http://urn.kb.se/resolve?urn=urn:nbn:se:bth-17900))
 
 Handledare: Andreas Arnesson
